--- a/service-virtual-event.html
+++ b/service-virtual-event.html
@@ -27,7 +27,8 @@
         rel="stylesheet">
     <!-- font-awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-
+    <!-- animate.js  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
@@ -36,14 +37,14 @@
         <div class="navbar">
             <div class="flex justify-evenly items-center text-xl">
                 <!-- Logo -->
-                <div class="">
+                <div class="animate__animated animate__heartBeat">
                     <a href="home.html">
                         <img src="assets/image/logo.png" alt="logo" style="width: 140px;">
                     </a>
                 </div>
 
                 <!-- Navigation Links -->
-                <nav class="relative">
+                <nav class="relative animate__animated animate__bounceInDown">
                     <ul class="flex space-x-16">
                         <li><a href="home.html" class="hover:text-yellow-500">Home</a></li>
                         <!-- Dropdown for Services -->
@@ -71,23 +72,23 @@
 
 
                 <!-- Social Icons -->
-                <div class="flex space-x-4">
+                <div class="flex space-x-4 animate__animated animate__flip">
                     <div class="social-icon w-10 h-10">
-                        <a href="">
+                        <a href="https://www.facebook.com/" class="" target="_blank">
                             <img src="assets/image/facebook.png" alt="facebook">
                         </a>
                     </div>
                     <div class="social-icon w-10 h-10" style="padding: 7px;">
-                        <a href="" class="">
+                        <a href="https://x.com/" class="" target="_blank">
                             <img src="assets/image/twitter.png" alt="twitter">
                         </a>
                     </div>
                     <div class="social-icon w-10 h-10">
-                        <a href="" class="">
+                        <a href="https://www.instagram.com/" class="" target="_blank">
                             <img src="assets/image/instragram.png" alt="instragram">
                         </a>
                     </div>
-                </div>
+                </div>      
             </div>
         </div>
     </header>
@@ -96,7 +97,7 @@
         <!-- banner -->
         <div class="sub-banner bg-center bg-top bg-cover bg-no-repeat p-40">
             <div class="container mx-auto px-4 flex items-center py-4 text-xl">
-                <div class="w-3/5 flex items-center ">
+                <div class="w-3/5 flex items-center   animate__animated animate__fadeInLeft">
                     <h1 class="font-2 text-7xl leading-normal mt-20">
                         <span class="font-2 text-7xl text-yellow-500">CUSTOMIZED </span><br>VIRTUAL EVENT
                     </h1>
@@ -113,7 +114,7 @@
                     </p>
                 </div>
                 <div class="form w-full choose-bg p-16 mt-10" style="height: 520px;">
-                    <form action="" method="get">
+                    <form action="" method="get" class="animate__animated animate__fadeInLeft">
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                             <div>
                                 <label for="first-name" class="block text-xl font-medium mb-3 text-zinc-400">First
@@ -202,30 +203,30 @@
                         </h3>
                     </div>
                     <div class="w-full flex justify-between items-start mt-20">
-                        <div class="w-1/2 bg-cover bg-center bg-no-repeat"
+                        <div class="w-1/2 bg-cover bg-center bg-no-repeat   animate__animated animate__fadeInLeft"
                             style="background-image: url('assets/image/event-manegement.jpg');height: 400px;">
                         </div>
                         <div class="w-1/2 flex justify-center items-center">
                             <div class="w-1/2 flex flex-col justify-center items-center">
                                 <div class="w-72 h-48 flex flex-col justify-center items-center">
-                                    <img src="assets/image/event (2).png" alt="event">
+                                    <img src="assets/image/event (2).png" alt="event" class="animate__animated animate__heartBeat">
                                     <span class="text-gray-400 mt-5">Custom Virtual Venue</span>
                                 </div>
                                 <div class=" border border-zinc-50 border-solid opacity-10" style="width: 378px;"></div>
                                 <div class="w-72 h-48 flex flex-col justify-center items-center">
-                                    <img src="assets/image/event (4).png" alt="event">
+                                    <img src="assets/image/event (4).png" alt="event" class="animate__animated animate__heartBeat">
                                     <span class="text-gray-400 mt-5">Custom Virtual Booths</span>
                                 </div>
                             </div>
                             <div class=" border border-zinc-50 border-solid opacity-10" style="height: 400px;"></div>
                             <div class="w-1/2 flex flex-col justify-center items-center">
                                 <div class="w-72 h-48 flex flex-col justify-center items-center">
-                                    <img src="assets/image/event (3).png" alt="event">
+                                    <img src="assets/image/event (3).png" alt="event" class="animate__animated animate__heartBeat">
                                     <span class="text-gray-400 mt-5">Live Conference Video</span>
                                 </div>
                                 <div class=" border border-zinc-50 border-solid opacity-10" style="width: 378px;"></div>
                                 <div class="w-72 h-48 flex flex-col justify-center items-center">
-                                    <img src="assets/image/event (1).png" alt="event">
+                                    <img src="assets/image/event (1).png" alt="event" class="animate__animated animate__heartBeat">
                                     <span class="text-gray-400 mt-5">Live Chat And Networking</span>
                                 </div>
                             </div>
@@ -247,19 +248,19 @@
                 </div>
                 <div class="container mx-auto px-4 flex items-center py-4 text-xl">
                     <div class="choose-bg w-full p-14">
-                        <p class="text-justify tracking-wider text-zinc-400">
+                        <p class="text-justify tracking-wider text-zinc-400 animate__animated animate__bounceIn">
                             The event industry has changed as a result of the COVID-19 pandemic. There’s no denying
                             that. Physical activities have been suspended temporarily. The rise of virtual and hybrid
                             events and their success have influenced a storm in the industry.
                         </p>
-                        <p class="text-justify tracking-wider mt-6 text-zinc-400">
+                        <p class="text-justify tracking-wider mt-6 text-zinc-400 animate__animated animate__bounceIn">
                             In the virtual event sector, 2020 was a year of trailblazers. Tech behemoths like
                             Salesforce, AWS, and Adobe shifted their yearly summits and conferences online and began
                             investigating the potential of digital to transform their virtual events into distinctive
                             and memorable experiences for their audiences. They went above and beyond and established
                             new benchmarks for<br> virtual event success.
                         </p>
-                        <p class="text-justify tracking-wider mt-6 text-zinc-400">
+                        <p class="text-justify tracking-wider mt-6 text-zinc-400 animate__animated animate__bounceIn">
                             Companies that specialise in virtual event management have the knowledge and skills to
                             handle a client’s virtual event project from beginning to end. These businesses make sure
                             there are no loose ends to embarrass you in front of your audience. They offer the
@@ -283,35 +284,35 @@
                         </div>
                         <div class="flex justify-between items-start mt-20">
                             <div class="flex flex-col items-center">
-                                <div class="w-60 h-60">
+                                <div class="w-60 h-60 animate__animated animate__rubberBand">
                                     <img class="object-cover" src="assets/image/company-1.png" alt="company-1"
                                         style="height: 236px;">
                                 </div>
                             </div>
                             <div class="h-60 border border-zinc-50 border-solid opacity-10"></div>
                             <div class="flex flex-col items-center">
-                                <div class="w-60 h-60">
+                                <div class="w-60 h-60 animate__animated animate__rubberBand">
                                     <img class="object-cover" src="assets/image/company-2.png" alt="company-2"
                                         style="height: 236px;">
                                 </div>
                             </div>
                             <div class="h-60 border border-zinc-50 border-solid opacity-10"></div>
                             <div class="flex flex-col items-center">
-                                <div class="w-60 h-60">
+                                <div class="w-60 h-60 animate__animated animate__rubberBand">
                                     <img class="object-cover object-center" src="assets/image/company-3.png"
                                         alt="company-3" style="height: 236px;">
                                 </div>
                             </div>
                             <div class="h-60 border border-zinc-50 border-solid opacity-10"></div>
                             <div class="flex flex-col items-center">
-                                <div class="w-60 h-60">
+                                <div class="w-60 h-60 animate__animated animate__rubberBand">
                                     <img class="object-cover" src="assets/image/company-4.png" alt="company-4"
                                         style="height: 236px;">
                                 </div>
                             </div>
                             <div class="h-60 border border-zinc-50 border-solid opacity-10"></div>
                             <div class="flex flex-col items-center">
-                                <div class="w-60 h-60">
+                                <div class="w-60 h-60 animate__animated animate__rubberBand">
                                     <img class="object-cover" src="assets/image/company-5.png" alt="company-5"
                                         style="height: 236px;">
                                 </div>
@@ -325,48 +326,53 @@
     </main>
     <footer>
         <div class="footer overflow-hidden h-auto">
-            <div class="container  2xl:container  xl:container  lg:container  md:container  sm:container mx-auto px-4 flex items-center py-20 text-xl">
-                <div class="2xl:w-1/3 md:w-1/2">
-                    <div class="flex flex-col justify-center items-start">
+            <div
+                class="container  lg:container  xl:container  lg:container  md:container  sm:container mx-auto px-4 flex items-center py-20 text-xl">
+                <div class="lg:w-1/3 md:w-1/2">
+                    <div class="flex flex-col justify-center items-start animate__animated animate__zoomInLeft">
                         <div class="logo">
-                            <img src="assets/image/logo.png" alt="logo" class="2xl:w-40 md:w-32">
+                            <img src="assets/image/logo.png" alt="logo" class="lg:w-40 md:w-32">
                         </div>
                         <div class="footer-contain mt-10 ">
-                            <p class="text-zinc-400 opacity-75 2xl:text-2xl md:text-lg leading-relaxed tracking-wide">
-                                Lorem Ipsum is simply dummy text<br> of the printing and typesetting<br> industry. Lorem Ipsum has been<br> the industry's standard dummy text<br> ever since the 1500s, when an<br> unknown printer took a galley.
+                            <p class="text-zinc-400 opacity-75 lg:text-lg md:text-lg leading-relaxed tracking-wide">
+                                Lorem Ipsum is simply dummy text<br> of the printing and typesetting<br> industry. Lorem
+                                Ipsum has been<br> the industry's standard dummy text<br> ever since the 1500s, when
+                                an<br> unknown printer took a galley.
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="2xl:w-1/3 md:w-1/2 flex-col justify-center items-center text-center">
+                <div class="lg:w-1/3 md:w-1/2 flex-col justify-center items-center text-center">
                     <div class="footer-title">
-                        <h4 class="font-2 text-yellow-500 uppercase font-medium 2xl:text-4xl md:text-3xl" >Reach us</h4>
+                        <h4 class="font-2 text-yellow-500 uppercase font-medium lg:text-4xl md:text-3xl">Reach us</h4>
                     </div>
-                    <div class="banner-border-2 pb-4"></div>   
+                    <div class="banner-border-2 pb-4"></div>
                     <div class="footer-social-icon flex justify-evenly mt-10">
                         <div class="calendly">
-                            <a href=""  class="flex flex-col items-center justify-center">
-                                <img src="assets/image/calendly.png" alt="Calendly" class="2xl:h-20 md:h-14">
-                                <span class="2xl:pt-5 2xl:text-xl md:text-base md:pt-3">Book a Meeting On<br> Calendly</span>
+                            <a href="" class="flex flex-col items-center justify-center animate__animated animate__slideInLeft">
+                                <img src="assets/image/calendly.png" alt="Calendly" class="lg:h-20 md:h-14">
+                                <span class="lg:pt-5 lg:text-xl md:text-base md:pt-3">Book a Meeting On<br>
+                                    Calendly</span>
                             </a>
                         </div>
                         <div class="whatsapp">
-                            <a href="" class=" flex flex-col items-center justify-center">
-                                <img src="assets/image/whatsapp.png" alt="whatsapp" class="2xl:h-20 md:h-14">
-                                <span class="2xl:pt-5 2xl:text-xl md:text-base md:pt-3">Connect With Us<br> On WhatsApp</span>
+                            <a href="" class=" flex flex-col items-center justify-center animate__animated animate__slideInRight">
+                                <img src="assets/image/whatsapp.png" alt="whatsapp" class="lg:h-20 md:h-14">
+                                <span class="lg:pt-5 lg:text-xl md:text-base md:pt-3">Connect With Us<br> On
+                                    WhatsApp</span>
                             </a>
                         </div>
                     </div>
                     <div class="footer-social-icon mt-10">
                         <div class="email">
-                            <a href=""  class="flex flex-col items-center justify-center">
-                                <img src="assets/image/email.png" alt="email" class="2xl:h-20 md:h-14">
-                                <span class="2xl:pt-5 2xl:text-xl md:text-base md:pt-3">Contact<br> @twinreality.in</span>
+                            <a href="" class="flex flex-col items-center justify-center animate__animated animate__slideInUp">
+                                <img src="assets/image/email.png" alt="email" class="lg:h-20 md:h-14">
+                                <span class="lg:pt-5 lg:text-xl md:text-base md:pt-3">Contact<br> @twinreality.in</span>
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="2xl:w-1/3 2xl:block twin-reality-img footer-img relativ md:hidden"></div>
+                <div class="lg:w-1/3 lg:block twin-reality-img footer-img relativ md:hidden"></div>
             </div>
         </div>
     </footer>
