--- a/VR Times blog details.html
+++ b/VR Times blog details.html
@@ -27,7 +27,8 @@
         rel="stylesheet">
     <!-- font-awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-
+    <!-- animate.js  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
@@ -36,14 +37,14 @@
         <div class="navbar">
             <div class="flex justify-evenly items-center text-xl">
                 <!-- Logo -->
-                <div class="">
+                <div class="animate__animated animate__heartBeat">
                     <a href="home.html">
                         <img src="assets/image/logo.png" alt="logo" style="width: 140px;">
                     </a>
                 </div>
 
                 <!-- Navigation Links -->
-                <nav class="relative">
+                <nav class="relative animate__animated animate__bounceInDown">
                     <ul class="flex space-x-16">
                         <li><a href="home.html" class="hover:text-yellow-500">Home</a></li>
                         <!-- Dropdown for Services -->
@@ -71,23 +72,23 @@
 
 
                 <!-- Social Icons -->
-                <div class="flex space-x-4">
+                <div class="flex space-x-4 animate__animated animate__flip">
                     <div class="social-icon w-10 h-10">
-                        <a href="">
+                        <a href="https://www.facebook.com/" class="" target="_blank">
                             <img src="assets/image/facebook.png" alt="facebook">
                         </a>
                     </div>
                     <div class="social-icon w-10 h-10" style="padding: 7px;">
-                        <a href="" class="">
+                        <a href="https://x.com/" class="" target="_blank">
                             <img src="assets/image/twitter.png" alt="twitter">
                         </a>
                     </div>
                     <div class="social-icon w-10 h-10">
-                        <a href="" class="">
+                        <a href="https://www.instagram.com/" class="" target="_blank">
                             <img src="assets/image/instragram.png" alt="instragram">
                         </a>
                     </div>
-                </div>
+                </div>  
             </div>
         </div>
     </header>
@@ -97,7 +98,7 @@
         <div class="sub-banner relative bg-center bg-top bg-cover bg-no-repeat p-40">
             <div class="container mx-auto px-4 flex items-center py-4 text-xl">
                 <div class="w-3/5 flex items-center ">
-                    <h1 class="font-2 text-7xl leading-normal mt-20">
+                    <h1 class="font-2 text-7xl leading-normal mt-20 animate__animated animate__fadeInLeft">
                         <span class="font-2 text-7xl text-yellow-500">AR/VR </span><br>TIMES
                     </h1>
                 </div>
@@ -107,7 +108,7 @@
         <!-- AR/VR Times blog details -->
         <div class="blog">
             <div class="container mx-auto px-4 flex flex-col items-center py-4 text-xl">
-                <div class="w-full flex justify-top">
+                <div class="w-full flex justify-top animate__animated animate__slideInUp">
                     <div class="">
                         <h2 class="font-2 text-6xl leading-normal">Process of designing a VR industrial<br> training
                             program</h2>
@@ -123,7 +124,7 @@
                     </div>
                 </div>
                 <div class="w-full mt-20">
-                    <img src="assets/image/blog.png" alt="blog" class="object-cover object-center"
+                    <img src="assets/image/blog.png" alt="blog" class="object-cover object-center  animate__animated animate__zoomIn"
                         style="width: 100%;height: 500px;">
                     <h3 class="font-2 text-4xl mt-16">Designing an Impactful VR Industrial Training Program:
                         Step-by-Step</h3>
@@ -219,7 +220,7 @@
                     </div>
                 </div>
                 <div class="w-full mt-10">
-                    <img src="assets/image/blog-2.png" alt="blog" class="object-cover object-center"
+                    <img src="assets/image/blog-2.png" alt="blog" class="object-cover object-center   animate__animated animate__zoomIn"
                         style="width: 100%;height: 500px;">
                     <p class="mt-10 text-zinc-300 font-light tracking-wide">
                         While we’ve outlined the steps to create an effective VR training program, let’s take a deeper
@@ -305,48 +306,53 @@
     </main>
     <footer>
         <div class="footer overflow-hidden h-auto">
-            <div class="container  2xl:container  xl:container  lg:container  md:container  sm:container mx-auto px-4 flex items-center py-20 text-xl">
-                <div class="2xl:w-1/3 md:w-1/2">
-                    <div class="flex flex-col justify-center items-start">
+            <div
+                class="container  lg:container  xl:container  lg:container  md:container  sm:container mx-auto px-4 flex items-center py-20 text-xl">
+                <div class="lg:w-1/3 md:w-1/2">
+                    <div class="flex flex-col justify-center items-start animate__animated animate__zoomInLeft">
                         <div class="logo">
-                            <img src="assets/image/logo.png" alt="logo" class="2xl:w-40 md:w-32">
+                            <img src="assets/image/logo.png" alt="logo" class="lg:w-40 md:w-32">
                         </div>
                         <div class="footer-contain mt-10 ">
-                            <p class="text-zinc-400 opacity-75 2xl:text-2xl md:text-lg leading-relaxed tracking-wide">
-                                Lorem Ipsum is simply dummy text<br> of the printing and typesetting<br> industry. Lorem Ipsum has been<br> the industry's standard dummy text<br> ever since the 1500s, when an<br> unknown printer took a galley.
+                            <p class="text-zinc-400 opacity-75 lg:text-lg md:text-lg leading-relaxed tracking-wide">
+                                Lorem Ipsum is simply dummy text<br> of the printing and typesetting<br> industry. Lorem
+                                Ipsum has been<br> the industry's standard dummy text<br> ever since the 1500s, when
+                                an<br> unknown printer took a galley.
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="2xl:w-1/3 md:w-1/2 flex-col justify-center items-center text-center">
+                <div class="lg:w-1/3 md:w-1/2 flex-col justify-center items-center text-center">
                     <div class="footer-title">
-                        <h4 class="font-2 text-yellow-500 uppercase font-medium 2xl:text-4xl md:text-3xl" >Reach us</h4>
+                        <h4 class="font-2 text-yellow-500 uppercase font-medium lg:text-4xl md:text-3xl">Reach us</h4>
                     </div>
-                    <div class="banner-border-2 pb-4"></div>   
+                    <div class="banner-border-2 pb-4"></div>
                     <div class="footer-social-icon flex justify-evenly mt-10">
                         <div class="calendly">
-                            <a href=""  class="flex flex-col items-center justify-center">
-                                <img src="assets/image/calendly.png" alt="Calendly" class="2xl:h-20 md:h-14">
-                                <span class="2xl:pt-5 2xl:text-xl md:text-base md:pt-3">Book a Meeting On<br> Calendly</span>
+                            <a href="" class="flex flex-col items-center justify-center animate__animated animate__slideInLeft">
+                                <img src="assets/image/calendly.png" alt="Calendly" class="lg:h-20 md:h-14">
+                                <span class="lg:pt-5 lg:text-xl md:text-base md:pt-3">Book a Meeting On<br>
+                                    Calendly</span>
                             </a>
                         </div>
                         <div class="whatsapp">
-                            <a href="" class=" flex flex-col items-center justify-center">
-                                <img src="assets/image/whatsapp.png" alt="whatsapp" class="2xl:h-20 md:h-14">
-                                <span class="2xl:pt-5 2xl:text-xl md:text-base md:pt-3">Connect With Us<br> On WhatsApp</span>
+                            <a href="" class=" flex flex-col items-center justify-center animate__animated animate__slideInRight">
+                                <img src="assets/image/whatsapp.png" alt="whatsapp" class="lg:h-20 md:h-14">
+                                <span class="lg:pt-5 lg:text-xl md:text-base md:pt-3">Connect With Us<br> On
+                                    WhatsApp</span>
                             </a>
                         </div>
                     </div>
                     <div class="footer-social-icon mt-10">
                         <div class="email">
-                            <a href=""  class="flex flex-col items-center justify-center">
-                                <img src="assets/image/email.png" alt="email" class="2xl:h-20 md:h-14">
-                                <span class="2xl:pt-5 2xl:text-xl md:text-base md:pt-3">Contact<br> @twinreality.in</span>
+                            <a href="" class="flex flex-col items-center justify-center animate__animated animate__slideInUp">
+                                <img src="assets/image/email.png" alt="email" class="lg:h-20 md:h-14">
+                                <span class="lg:pt-5 lg:text-xl md:text-base md:pt-3">Contact<br> @twinreality.in</span>
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="2xl:w-1/3 2xl:block twin-reality-img footer-img relativ md:hidden"></div>
+                <div class="lg:w-1/3 lg:block twin-reality-img footer-img relativ md:hidden"></div>
             </div>
         </div>
     </footer>
