--- a/VR-Times.html
+++ b/VR-Times.html
@@ -27,7 +27,8 @@
         rel="stylesheet">
     <!-- font-awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-
+    <!-- animate.js  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
@@ -36,14 +37,14 @@
         <div class="navbar">
             <div class="flex justify-evenly items-center text-xl">
                 <!-- Logo -->
-                <div class="">
+                <div class="animate__animated animate__heartBeat">
                     <a href="home.html">
                         <img src="assets/image/logo.png" alt="logo" style="width: 140px;">
                     </a>
                 </div>
 
                 <!-- Navigation Links -->
-                <nav class="relative">
+                <nav class="relative animate__animated animate__bounceInDown">
                     <ul class="flex space-x-16">
                         <li><a href="home.html" class="hover:text-yellow-500">Home</a></li>
                         <!-- Dropdown for Services -->
@@ -71,23 +72,23 @@
 
 
                 <!-- Social Icons -->
-                <div class="flex space-x-4">
+                <div class="flex space-x-4 animate__animated animate__flip">
                     <div class="social-icon w-10 h-10">
-                        <a href="">
+                        <a href="https://www.facebook.com/" class="" target="_blank">
                             <img src="assets/image/facebook.png" alt="facebook">
                         </a>
                     </div>
                     <div class="social-icon w-10 h-10" style="padding: 7px;">
-                        <a href="" class="">
+                        <a href="https://x.com/" class="" target="_blank">
                             <img src="assets/image/twitter.png" alt="twitter">
                         </a>
                     </div>
                     <div class="social-icon w-10 h-10">
-                        <a href="" class="">
+                        <a href="https://www.instagram.com/" class="" target="_blank">
                             <img src="assets/image/instragram.png" alt="instragram">
                         </a>
                     </div>
-                </div>
+                </div>  
             </div>
         </div>
     </header>
@@ -97,7 +98,7 @@
         <div class="sub-banner relative bg-center bg-top bg-cover bg-no-repeat p-40">
             <div class="container mx-auto px-4 flex items-center py-4 text-xl">
                 <div class="w-3/5 flex items-center ">
-                    <h1 class="font-2 text-7xl leading-normal mt-20">
+                    <h1 class="font-2 text-7xl leading-normal mt-20 animate__animated animate__fadeInLeft">
                         <span class="font-2 text-7xl text-yellow-500">AR/VR </span><br>TIMES
                     </h1>
                 </div>
@@ -109,7 +110,7 @@
             <div class="arVrCard">
                 <div class="container mx-auto px-4 flex flex-col items-center py-4 text-xl">
                     <div class="w-full flex flex-wrap justify-evenly">
-                        <div class="mt-14 choose-bg" style="width: 450px; height: 600px;">
+                        <div class="mt-14 choose-bg animate__animated animate__zoomIn" style="width: 450px; height: 600px;">
                             <div class="relative">
                                 <img src="assets/image/times-1.png" alt="times-1" class="h-72 object-cover object-center">
                                 <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
@@ -130,7 +131,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="mt-14 choose-bg" style="width: 450px; height: 600px;">
+                        <div class="mt-14 choose-bg animate__animated animate__zoomIn" style="width: 450px; height: 600px;">
                             <div class="relative">
                                 <img src="assets/image/times-3.png" alt="times-3" class="h-72 object-cover object-center">
                                 <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
@@ -150,7 +151,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="mt-14 choose-bg" style="width: 450px; height: 600px;">
+                        <div class="mt-14 choose-bg animate__animated animate__zoomIn" style="width: 450px; height: 600px;">
                             <div class="relative">
                                 <img src="assets/image/times-4.png" alt="times-1" class="h-72 object-cover object-center">
                                 <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
@@ -170,7 +171,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="mt-14 choose-bg" style="width: 450px; height: 600px;">
+                        <div class="mt-14 choose-bg animate__animated animate__zoomIn" style="width: 450px; height: 600px;">
                             <div class="relative">
                                 <img src="assets/image/times-5.png" alt="times-5" class="h-72 object-cover object-center">
                                 <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
@@ -190,7 +191,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="mt-14 choose-bg" style="width: 450px; height: 600px;">
+                        <div class="mt-14 choose-bg animate__animated animate__zoomIn" style="width: 450px; height: 600px;">
                             <div class="relative">
                                 <img src="assets/image/times-6.png" alt="times-6" class="h-72 object-cover object-center">
                                 <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
@@ -210,7 +211,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="mt-14 choose-bg" style="width: 450px; height: 600px;">
+                        <div class="mt-14 choose-bg animate__animated animate__zoomIn" style="width: 450px; height: 600px;">
                             <div class="relative">
                                 <img src="assets/image/times-7.png" alt="times-7" class="h-72 object-cover object-center">
                                 <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
@@ -230,7 +231,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="mt-14 choose-bg" style="width: 450px; height: 600px;">
+                        <div class="mt-14 choose-bg animate__animated animate__zoomIn" style="width: 450px; height: 600px;">
                             <div class="relative">
                                 <img src="assets/image/times-8.png" alt="times-8" class="h-72 object-cover object-center">
                                 <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
@@ -250,7 +251,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="mt-14 choose-bg" style="width: 450px; height: 600px;">
+                        <div class="mt-14 choose-bg animate__animated animate__zoomIn" style="width: 450px; height: 600px;">
                             <div class="relative">
                                 <img src="assets/image/times-9.png" alt="times-9" class="h-72 object-cover object-center">
                                 <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
@@ -270,7 +271,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="mt-14 choose-bg" style="width: 450px; height: 600px;">
+                        <div class="mt-14 choose-bg animate__animated animate__zoomIn" style="width: 450px; height: 600px;">
                             <div class="relative">
                                 <img src="assets/image/times-10.png" alt="times-10" class="h-72 object-cover object-center">
                                 <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
@@ -306,35 +307,35 @@
                         <div class="flex justify-between items-start mt-20">
                             <div class="flex flex-wrap items-center justify-center">
                                 <div class="w-60 h-60 md:w-48 md:h-48">
-                                    <img class="object-cover h-56 md:h-44" src="assets/image/company-1.png" alt="company-1"
+                                    <img class="animate__animated animate__rubberBand object-cover h-56 md:h-44" src="assets/image/company-1.png" alt="company-1"
                                         >
                                 </div>
                             </div>
                             <div class="h-60 md:h-48 border border-zinc-50 border-solid opacity-10"></div>
                             <div class="flex items-center justify-center">
                                 <div class="w-60 h-60 md:w-48 md:h-48">
-                                    <img class="object-cover h-56 md:h-44" src="assets/image/company-2.png" alt="company-2"
+                                    <img class="animate__animated animate__rubberBand object-cover h-56 md:h-44" src="assets/image/company-2.png" alt="company-2"
                                         >
                                 </div>
                             </div>
                             <div class="h-60 md:h-48 border border-zinc-50 border-solid opacity-10"></div>
                             <div class="flex items-center justify-center">
                                 <div class="w-60 h-60 md:w-48 md:h-48">
-                                    <img class="object-cover h-56 md:h-44 object-center" src="assets/image/company-3.png"
+                                    <img class="animate__animated animate__rubberBand object-cover h-56 md:h-44 object-center" src="assets/image/company-3.png"
                                         alt="company-3" >
                                 </div>
                             </div>
                             <div class="h-60 md:h-48 border border-zinc-50 border-solid opacity-10"></div>
                             <div class="flex items-center justify-center">
                                 <div class="w-60 h-60 md:w-48 md:h-48">
-                                    <img class="object-cover h-56 md:h-44" src="assets/image/company-4.png" alt="company-4"
+                                    <img class="animate__animated animate__rubberBand object-cover h-56 md:h-44" src="assets/image/company-4.png" alt="company-4"
                                         >
                                 </div>
                             </div>
                             <div class="h-60 md:h-48 md:hidden lg:block border border-zinc-50 border-solid opacity-10"></div>
                             <div class="flex md:hidden lg:block items-center justify-center">
                                 <div class="w-60 h-60 md:w-48 md:h-48">
-                                    <img class="object-cover h-56 md:h-44" src="assets/image/company-5.png" alt="company-5"
+                                    <img class="animate__animated animate__rubberBand object-cover h-56 md:h-44" src="assets/image/company-5.png" alt="company-5"
                                         >
                                 </div>
                             </div>
@@ -347,48 +348,53 @@
     </main>
     <footer>
         <div class="footer overflow-hidden h-auto">
-            <div class="container  2xl:container  xl:container  lg:container  md:container  sm:container mx-auto px-4 flex items-center py-20 text-xl">
-                <div class="2xl:w-1/3 md:w-1/2">
-                    <div class="flex flex-col justify-center items-start">
+            <div
+                class="container  lg:container  xl:container  lg:container  md:container  sm:container mx-auto px-4 flex items-center py-20 text-xl">
+                <div class="lg:w-1/3 md:w-1/2">
+                    <div class="flex flex-col justify-center items-start animate__animated animate__zoomInLeft">
                         <div class="logo">
-                            <img src="assets/image/logo.png" alt="logo" class="2xl:w-40 md:w-32">
+                            <img src="assets/image/logo.png" alt="logo" class="lg:w-40 md:w-32">
                         </div>
                         <div class="footer-contain mt-10 ">
-                            <p class="text-zinc-400 opacity-75 2xl:text-2xl md:text-lg leading-relaxed tracking-wide">
-                                Lorem Ipsum is simply dummy text<br> of the printing and typesetting<br> industry. Lorem Ipsum has been<br> the industry's standard dummy text<br> ever since the 1500s, when an<br> unknown printer took a galley.
+                            <p class="text-zinc-400 opacity-75 lg:text-lg md:text-lg leading-relaxed tracking-wide">
+                                Lorem Ipsum is simply dummy text<br> of the printing and typesetting<br> industry. Lorem
+                                Ipsum has been<br> the industry's standard dummy text<br> ever since the 1500s, when
+                                an<br> unknown printer took a galley.
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="2xl:w-1/3 md:w-1/2 flex-col justify-center items-center text-center">
+                <div class="lg:w-1/3 md:w-1/2 flex-col justify-center items-center text-center">
                     <div class="footer-title">
-                        <h4 class="font-2 text-yellow-500 uppercase font-medium 2xl:text-4xl md:text-3xl" >Reach us</h4>
+                        <h4 class="font-2 text-yellow-500 uppercase font-medium lg:text-4xl md:text-3xl">Reach us</h4>
                     </div>
-                    <div class="banner-border-2 pb-4"></div>   
+                    <div class="banner-border-2 pb-4"></div>
                     <div class="footer-social-icon flex justify-evenly mt-10">
                         <div class="calendly">
-                            <a href=""  class="flex flex-col items-center justify-center">
-                                <img src="assets/image/calendly.png" alt="Calendly" class="2xl:h-20 md:h-14">
-                                <span class="2xl:pt-5 2xl:text-xl md: md:pt-3">Book a Meeting On<br> Calendly</span>
+                            <a href="" class="flex flex-col items-center justify-center animate__animated animate__slideInLeft">
+                                <img src="assets/image/calendly.png" alt="Calendly" class="lg:h-20 md:h-14">
+                                <span class="lg:pt-5 lg:text-xl md:text-base md:pt-3">Book a Meeting On<br>
+                                    Calendly</span>
                             </a>
                         </div>
                         <div class="whatsapp">
-                            <a href="" class=" flex flex-col items-center justify-center">
-                                <img src="assets/image/whatsapp.png" alt="whatsapp" class="2xl:h-20 md:h-14">
-                                <span class="2xl:pt-5 2xl:text-xl md: md:pt-3">Connect With Us<br> On WhatsApp</span>
+                            <a href="" class=" flex flex-col items-center justify-center animate__animated animate__slideInRight">
+                                <img src="assets/image/whatsapp.png" alt="whatsapp" class="lg:h-20 md:h-14">
+                                <span class="lg:pt-5 lg:text-xl md:text-base md:pt-3">Connect With Us<br> On
+                                    WhatsApp</span>
                             </a>
                         </div>
                     </div>
                     <div class="footer-social-icon mt-10">
                         <div class="email">
-                            <a href=""  class="flex flex-col items-center justify-center">
-                                <img src="assets/image/email.png" alt="email" class="2xl:h-20 md:h-14">
-                                <span class="2xl:pt-5 2xl:text-xl md: md:pt-3">Contact<br> @twinreality.in</span>
+                            <a href="" class="flex flex-col items-center justify-center animate__animated animate__slideInUp">
+                                <img src="assets/image/email.png" alt="email" class="lg:h-20 md:h-14">
+                                <span class="lg:pt-5 lg:text-xl md:text-base md:pt-3">Contact<br> @twinreality.in</span>
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="2xl:w-1/3 2xl:block twin-reality-img footer-img relativ md:hidden"></div>
+                <div class="lg:w-1/3 lg:block twin-reality-img footer-img relativ md:hidden"></div>
             </div>
         </div>
     </footer>
