--- a/home.html
+++ b/home.html
@@ -212,38 +212,38 @@
                 class="container  lg:container  xl:container  lg:container  md:container  sm:container mx-auto px-4 flex items-center py-4 text-xl">
                 <div class="choose-bg w-full h-auto p-16 text-center">
                     <div class="">
-                        <h3 class="font-2 lg:text-4xl md:text-3xl">
+                        <h3 class="font-2 lg:text-5xl md:text-3xl">
                             WHY CHOOSE TWIN <span class="font-2 text-yellow-500">REALITY?</span>
                         </h3>
                     </div>
                     <div class="flex sm:flex-wrap justify-evenly items-start lg:mt-20 md:mt-10">
-                        <div class="flex flex-col items-center">
+                        <div class="flex flex-col items-center animate__animated animate__zoomIn">
                             <div class="lg:w-24 lg:h-24 md:h-16 md:w-16 choose-bg  p-4" style="background: rgb(36,31,52);background: linear-gradient(127deg, rgba(36,31,52,1) 0%, rgba(36,27,59,1) 22%, rgba(14,7,32,1) 55%);
                             border: 2px solid #241e37;">
                                 <img class="w-20" src="assets/image/joystick.png" alt="joystick">
                             </div>
-                            <p class="text-center mt-6 lg:text-lg md:text-lg">Modern Technology</p>
+                            <p class="text-center mt-6 lg:text-2xl md:text-lg">Modern Technology</p>
                         </div>
-                        <div class="flex flex-col items-center">
+                        <div class="flex flex-col items-center animate__animated animate__zoomIn">
                             <div class="lg:w-24 lg:h-24 md:h-16 md:w-16 choose-bg  p-4" style="background: rgb(36,31,52);background: linear-gradient(127deg, rgba(36,31,52,1) 0%, rgba(36,27,59,1) 22%, rgba(14,7,32,1) 55%);
                             border: 2px solid #241e37;">
                                 <img class="w-20" src="assets/image/settings.png" alt="settings">
                             </div>
-                            <p class="text-center mt-6 lg:text-lg md:text-lg">Cost Effective</p>
+                            <p class="text-center mt-6 lg:text-2xl md:text-lg">Cost Effective</p>
                         </div>
-                        <div class="flex flex-col items-center">
+                        <div class="flex flex-col items-center animate__animated animate__zoomIn">
                             <div class="lg:w-24 lg:h-24 md:h-16 md:w-16 choose-bg  p-4" style="background: rgb(36,31,52);background: linear-gradient(127deg, rgba(36,31,52,1) 0%, rgba(36,27,59,1) 22%, rgba(14,7,32,1) 55%);
                             border: 2px solid #241e37;">
                                 <img class="w-20" src="assets/image/costumer-service.png" alt="costumer-service">
                             </div>
-                            <p class="text-center mt-6 lg:text-lg md:text-lg">Versatile Applications</p>
+                            <p class="text-center mt-6 lg:text-2xl md:text-lg">Versatile Applications</p>
                         </div>
-                        <div class="flex flex-col items-center">
+                        <div class="flex flex-col items-center animate__animated animate__zoomIn">
                             <div class="lg:w-24 lg:h-24 md:h-16 md:w-16 choose-bg  p-4" style="background: rgb(36,31,52);background: linear-gradient(127deg, rgba(36,31,52,1) 0%, rgba(36,27,59,1) 22%, rgba(14,7,32,1) 55%);
                             border: 2px solid #241e37;">
                                 <img class="w-20" src="assets/image/bonus.png" alt="bonus">
                             </div>
-                            <p class="text-center mt-6 lg:text-lg md:text-lg">Scalability</p>
+                            <p class="text-center mt-6 lg:text-2xl md:text-lg">Scalability</p>
                         </div>
                     </div>
                 </div>
@@ -254,7 +254,7 @@
         <div class="reality">
             <div
                 class="container  lg:container  xl:container  lg:container  md:container  sm:container mx-auto px-4 lg:flex lg:flex-row md:flex-col lg:items-center py-4 text-xl">
-                <div class="md:w-full mb-10 md:block lg:hidden">
+                <div class="md:w-full mb-10 md:block lg:hidden  animate__animated animate__fadeInRight">
                     <img src="assets/image/vr-app.png" alt="vr-app" class="h-80 object-cover" style="width: 800px;">
                 </div>
                 <div class="lg:w-3/6 md:w-full lg:text-left md:text-center">
@@ -268,13 +268,13 @@
                         real-<br>time adaptability, and highly immersive services for Virtual Reality<br> applications .
                     </p>
                 </div>
-                <div class="lg:w-3/6 lg:block twin-reality-img reality-img bg-cover relative md:hidden"></div>
+                <div class="lg:w-3/6 lg:block twin-reality-img reality-img bg-cover relative md:hidden animate__animated animate__fadeInRight"></div>
             </div>
             <div class="lg:my-28"></div>
             <div
                 class="container  lg:container  xl:container  lg:container  md:container  sm:container mx-auto px-4 lg:flex lg:flex-row md:flex-col items-center py-4 text-xl">
-                <div class="lg:w-3/6 twin-reality-img reality-img-2 relative lg:block md:hidden"></div>
-                <div class="md:w-full mb-10 md:block lg:hidden">
+                <div class="lg:w-3/6 twin-reality-img reality-img-2 relative lg:block md:hidden animate__animated animate__fadeInLeft"></div>
+                <div class="md:w-full mb-10 md:block lg:hidden animate__animated animate__fadeInLeft">
                     <img src="assets/image/banner-img.png" alt="vr-app" class="h-80 object-cover" style="width: 800px;">
                 </div>
                 <div class="lg:w-3/6 md:w-full lg:text-left md:text-center">
@@ -292,7 +292,7 @@
             <div
                 class="container  lg:container  xl:container  lg:container  md:container  sm:container mx-auto px-4 lg:flex lg:flex-row md:flex-col items-center py-4 text-xl">
                 <div class="lg:w-3/6 md:w-full lg:text-left md:text-center">
-                    <div class="md:w-full mb-10 md:block lg:hidden">
+                    <div class="md:w-full mb-10 md:block lg:hidden  animate__animated animate__fadeInRight">
                         <img src="assets/image/vr-3.jpg" alt="vr-app" class="h-80 object-cover" style="width: 800px;">
                     </div>
                     <h2 class="font-2 lg:text-6xl uppercase leading-relaxed">VIRTUAL EVENTS</h2>
@@ -303,7 +303,7 @@
                         event, such as 3D immersive<br> platforms, live streaming, and audience involvement.
                     </p>
                 </div>
-                <div class="lg:w-3/6 twin-reality-img reality-img-3 relative lg:block md:hidden"></div>
+                <div class="lg:w-3/6 twin-reality-img reality-img-3 relative lg:block md:hidden  animate__animated animate__fadeInRight"></div>
             </div>
         </div>
         <div class="my-36"></div>
@@ -314,7 +314,7 @@
                     class="container  lg:container  xl:container  lg:container  md:container  sm:container mx-auto px-4 lg:flex lg:flex-row md:flex-col lg:justify-between items-center py-4 text-xl">
                     <div class="lg:w-2/5 md:w-full md:mb-56">
                         <div class="our-project lg:flex md:flex-row md:justify-between lg:flex-col">
-                            <img src="assets/image/Model.png" alt="Model" class="lg:w-96 md:w-72">
+                            <img src="assets/image/Model.png" alt="Model" class="lg:w-96 md:w-72 animate__animated animate__pulse">
                             <div class="md:text-right lg:text-left">
                                 <h2 class="font-2 lg:text-6xl md:text-4xl md:mb-5 uppercase leading-relaxed mt-24">our
                                     projects</h2>
@@ -367,7 +367,7 @@
                                 OUR SERVIECS
                             </h3>
                         </div>
-                        <div class="flex justify-between items-start mt-20">
+                        <div class="flex justify-between items-start mt-20   animate__animated animate__bounceIn">
                             <div class="flex flex-col items-center">
                                 <div class="lg:w-60 lg:h-64 md:w-32 md:h-32">
                                     <img class="object-cover md:w-32 md:h-32 lg:w-64 lg:h-64"
@@ -376,7 +376,7 @@
                                 </div>
                                 <p class="text-center mt-6 lg:text-2xl md:text-lg">Virtual Reality</p>
                             </div>
-                            <div class="flex flex-col items-center">
+                            <div class="flex flex-col items-center   animate__animated animate__bounceIn">
                                 <div class="lg:w-60 lg:h-60 md:w-32 md:h-32">
                                     <img class="object-cover md:w-32 md:h-32 lg:w-64 lg:h-64"
                                         src="assets/image/services-2.png" alt="services-2"
@@ -384,7 +384,7 @@
                                 </div>
                                 <p class="text-center mt-6 lg:text-2xl md:text-lg">VR Industrial <br> Training</p>
                             </div>
-                            <div class="flex flex-col items-center">
+                            <div class="flex flex-col items-center   animate__animated animate__bounceIn">
                                 <div class="lg:w-60 lg:h-60 md:w-32 md:h-32">
                                     <img class="object-cover md:w-32 md:h-32 lg:w-64 lg:h-64 object-center"
                                         src="assets/image/services-3.png" alt="services-3"
@@ -392,7 +392,7 @@
                                 </div>
                                 <p class="text-center mt-6 lg:text-2xl md:text-lg">Metaverse <br> Development</p>
                             </div>
-                            <div class="flex flex-col items-center">
+                            <div class="flex flex-col items-center   animate__animated animate__bounceIn">
                                 <div class="lg:w-60 lg:h-60 md:w-32 md:h-32">
                                     <img class="object-cover md:w-32 md:h-32 lg:w-64 lg:h-64"
                                         src="assets/image/services-4.png" alt="services-4"
@@ -400,7 +400,7 @@
                                 </div>
                                 <p class="text-center mt-6 lg:text-2xl md:text-lg">Virtual Event <br> Management</p>
                             </div>
-                            <div class="flex flex-col items-center">
+                            <div class="flex flex-col items-center   animate__animated animate__bounceIn">
                                 <div class="lg:w-60 lg:h-60 md:w-32 md:h-32">
                                     <img class="object-cover md:w-32 md:h-32 lg:w-64 lg:h-64"
                                         src="assets/image/services-5.png" alt="services-5"
@@ -426,7 +426,7 @@
             </div>
             <div
                 class="container  lg:container  xl:container  lg:container  md:container  sm:container mx-auto px-4 flex lg:flex-row md:flex-col items-center py-4 text-xl">
-                <div class=" lg:w-3/6 md:w-full md:flex md:flex-col">
+                <div class=" lg:w-3/6 md:w-full md:flex md:flex-col animate__animated animate__fadeInLeft">
                     <div class="flex items-center">
                         <img class="w-56 h-56 md:w-48 md:h-48 object-cover object-center" src="assets/image/times-1.png"
                             alt="times-1">
@@ -470,7 +470,7 @@
                             style="width: 150px;">VIEW ALL</a>
                     </div>
                 </div>
-                <div class="lg:w-3/6 lg:block md:w-1/2 twin-reality-img our-times-img relative md:hidden"></div>
+                <div class="lg:w-3/6 lg:block md:w-1/2 twin-reality-img our-times-img relative md:hidden   animate__animated animate__fadeInRight"></div>
             </div>
         </div>
         <div class="my-28"></div>
@@ -482,9 +482,9 @@
                     <div class="w-full   overflow-hidden">
                         <h2 class="text-center font-2 lg:text-7xl md:text-5xl mb-20">TESTIMONTAL​</h2>
 
-                        <div class="relative">
+                        <div class="relative animate__animated animate__bounce">
                             <!-- Slider Content -->
-                            <div class="flex transition-transform duration-500 ease-in-out" id="testimonial-slider">
+                            <div class="flex transition-transform duration-500 ease-in-out" id="testimonial-slider  ">
                                 <!-- Slide 1 -->
                                 <div class="min-w-full flex flex-col items-center p-6 rounded-lg">
                                     <div
@@ -582,7 +582,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Slider container  lg:container  xl:container  lg:container  md:container  sm:container -->
                 </div>
             </div>
             <div class="my-28"></div>
@@ -597,35 +596,35 @@
                             </h3>
                         </div>
                         <div class="flex justify-between items-start mt-20">
-                            <div class="flex flex-col items-center">
+                            <div class="flex flex-col items-center animate__animated animate__shakeX">
                                 <div class="lg:w-60 lg:h-60 md:w-28 md:h-28">
                                     <img class="object-cover lg:h-60 md:h-24" src="assets/image/company-1.png"
                                         alt="company-1">
                                 </div>
                             </div>
                             <div class="lg:h-60 md:h-28 border border-zinc-50 border-solid opacity-10"></div>
-                            <div class="flex flex-col items-center">
+                            <div class="flex flex-col items-center animate__animated animate__shakeX">
                                 <div class="lg:w-60 lg:h-60 md:w-28 md:h-28">
                                     <img class="object-cover lg:h-60 md:h-24" src="assets/image/company-2.png"
                                         alt="company-2">
                                 </div>
                             </div>
                             <div class="lg:h-60 md:h-28 border border-zinc-50 border-solid opacity-10"></div>
-                            <div class="flex flex-col items-center">
+                            <div class="flex flex-col items-center animate__animated animate__shakeX">
                                 <div class="lg:w-60 lg:h-60 md:w-28 md:h-28">
                                     <img class="object-cover lg:h-60 md:h-24 object-center"
                                         src="assets/image/company-3.png" alt="company-3">
                                 </div>
                             </div>
                             <div class="lg:h-60 md:h-28 border border-zinc-50 border-solid opacity-10"></div>
-                            <div class="flex flex-col items-center">
+                            <div class="flex flex-col items-center animate__animated animate__shakeX">
                                 <div class="lg:w-60 lg:h-60 md:w-28 md:h-28">
                                     <img class="object-cover lg:h-60 md:h-24" src="assets/image/company-4.png"
                                         alt="company-4">
                                 </div>
                             </div>
                             <div class="lg:h-60 md:h-28 border border-zinc-50 border-solid opacity-10"></div>
-                            <div class="flex flex-col items-center">
+                            <div class="flex flex-col items-center animate__animated animate__shakeX">
                                 <div class="lg:w-60 lg:h-60 md:w-28 md:h-28">
                                     <img class="object-cover lg:h-60 md:h-24" src="assets/image/company-5.png"
                                         alt="company-5">
@@ -643,7 +642,7 @@
             <div
                 class="container  lg:container  xl:container  lg:container  md:container  sm:container mx-auto px-4 flex items-center py-20 text-xl">
                 <div class="lg:w-1/3 md:w-1/2">
-                    <div class="flex flex-col justify-center items-start">
+                    <div class="flex flex-col justify-center items-start animate__animated animate__zoomInLeft">
                         <div class="logo">
                             <img src="assets/image/logo.png" alt="logo" class="lg:w-40 md:w-32">
                         </div>
@@ -663,14 +662,14 @@
                     <div class="banner-border-2 pb-4"></div>
                     <div class="footer-social-icon flex justify-evenly mt-10">
                         <div class="calendly">
-                            <a href="" class="flex flex-col items-center justify-center">
+                            <a href="" class="flex flex-col items-center justify-center animate__animated animate__slideInLeft">
                                 <img src="assets/image/calendly.png" alt="Calendly" class="lg:h-20 md:h-14">
                                 <span class="lg:pt-5 lg:text-xl md:text-base md:pt-3">Book a Meeting On<br>
                                     Calendly</span>
                             </a>
                         </div>
                         <div class="whatsapp">
-                            <a href="" class=" flex flex-col items-center justify-center">
+                            <a href="" class=" flex flex-col items-center justify-center animate__animated animate__slideInRight">
                                 <img src="assets/image/whatsapp.png" alt="whatsapp" class="lg:h-20 md:h-14">
                                 <span class="lg:pt-5 lg:text-xl md:text-base md:pt-3">Connect With Us<br> On
                                     WhatsApp</span>
@@ -679,7 +678,7 @@
                     </div>
                     <div class="footer-social-icon mt-10">
                         <div class="email">
-                            <a href="" class="flex flex-col items-center justify-center">
+                            <a href="" class="flex flex-col items-center justify-center animate__animated animate__slideInUp">
                                 <img src="assets/image/email.png" alt="email" class="lg:h-20 md:h-14">
                                 <span class="lg:pt-5 lg:text-xl md:text-base md:pt-3">Contact<br> @twinreality.in</span>
                             </a>
